--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
 	</header>
 	<main>
 		<section>
+			<h2>About</h2>
+			<p>Hello, I am Yogansh Sharma. I am an undergraduate from IIT Kharagpur.</p>
+		</section>
+		<section>
 			<h2>My links</h2>
+
 			<ul>
+				<li><a href="https://github.com/YoganshSharma">Github</a></li>
+				<li><a href="https://www.linkedin.com/in/yogansh-sharma-3ba506259">LinkedIn</a></li>
 				<li><a href="https://instagram.com/yogansh1004">Instagram</a></li>
 				<li><a href="https://www.facebook.com/profile.php?id=100087555068602">Facebook</a></li>
-				<li><a href="https://www.linkedin.com/in/yogansh-sharma-3ba506259">LinkedIn</a></li>
-				<li><a href="https://github.com/YoganshSharma">Github</a></li>
 			</ul>
+		</section>
+		<section>
+
+			<h2>Contact me </h2>
 			<ul>
-				<li><a href="mailto:yoganshsharma65@gmail.com">Email</a></li>
+				<li><a href="mailto:yoganshsharma65@gmail.com">Email: yoganshsharma65@gmail.com</a></li>
 				<li><a href="https://t.me/yoqnsh">Telegram</a></li>
 				<li>Matrix: @yoganshsharma:matrix.org</li>
 			</ul>
