--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<ul>
 				<li><a href="https://github.com/YoganshSharma">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/yogansh-sharma-3ba506259">LinkedIn</a></li>
+				<li><a href="https://twitter.com/yogansh1004">Twitter</a></li>
 				<li><a href="https://instagram.com/yogansh1004">Instagram</a></li>
 				<li><a href="https://www.facebook.com/profile.php?id=100087555068602">Facebook</a></li>
 			</ul>
