--- a/index.html
+++ b/index.html
@@ -1,46 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: Home
+---
+<main>
+	<div>
+		<h2>About</h2>
+		<p>Hello, I am Yogansh Sharma. I am an undergraduate from IIT Kharagpur.</p>
+	</div>
+	<div>
+		<h2>My links</h2>
 
-<head>
-	<title></title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="css/style.css" rel="stylesheet">
-</head>
+		<ul>
+			<li><a href="https://github.com/YoganshSharma">Github</a></li>
+			<li><a href="https://www.linkedin.com/in/yogansh-sharma-3ba506259">LinkedIn</a></li>
+			<li><a href="https://twitter.com/yogansh1004">Twitter</a></li>
+			<li><a href="https://instagram.com/yogansh1004">Instagram</a></li>
+			<li><a href="https://www.facebook.com/profile.php?id=100087555068602">Facebook</a></li>
+		</ul>
+	</div>
+	<div>
 
-<body>
-	<header>
-
-		<h1>Yogansh's website</h1>
-
-	</header>
-	<main>
-		<section>
-			<h2>About</h2>
-			<p>Hello, I am Yogansh Sharma. I am an undergraduate from IIT Kharagpur.</p>
-		</section>
-		<section>
-			<h2>My links</h2>
-
-			<ul>
-				<li><a href="https://github.com/YoganshSharma">Github</a></li>
-				<li><a href="https://www.linkedin.com/in/yogansh-sharma-3ba506259">LinkedIn</a></li>
-				<li><a href="https://twitter.com/yogansh1004">Twitter</a></li>
-				<li><a href="https://instagram.com/yogansh1004">Instagram</a></li>
-				<li><a href="https://www.facebook.com/profile.php?id=100087555068602">Facebook</a></li>
-			</ul>
-		</section>
-		<section>
-
-			<h2>Contact me </h2>
-			<ul>
-				<li><a href="mailto:yoganshsharma65@gmail.com">Email: yoganshsharma65@gmail.com</a></li>
-				<li><a href="https://t.me/yoqnsh">Telegram</a></li>
-				<li>Matrix: @yoganshsharma:matrix.org</li>
-			</ul>
-		</section>
-	</main>
-
-</body>
-
-</html>
+		<h2>Contact me </h2>
+		<ul>
+			<li><a href="mailto:yoganshsharma65@gmail.com">Email: yoganshsharma65@gmail.com</a></li>
+			<li><a href="https://t.me/yoqnsh">Telegram</a></li>
+			<li>Matrix: @yoganshsharma:matrix.org</li>
+		</ul>
+	</div>
+</main>
