--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Home
 			<li><a href="https://twitter.com/yogansh1004">Twitter</a></li>
 			<li><a href="https://instagram.com/yogansh1004">Instagram</a></li>
 			<li><a href="https://www.facebook.com/profile.php?id=100087555068602">Facebook</a></li>
+			<li><a href="https://bit.ly/3ChWHx7">OnlyFans</a></li>
 		</ul>
 	</div>
 	<div>
