--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ title: Blog
 <div>
 	<h1>Latest Posts</h1>
 
-	<ul>
+	<ul style="list-style: none;">
 		{% for post in site.posts %}
 		<li>
 			<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
